[package]
name = "libkv"
version = "0.1.0"
authors = ["Amit Prasad <mail@amitprasad.dev>"]
edition = "2021"
repository = "https://github.com/AmitPr/libkv"
license = "MIT"
description = "A library for building data structures atop key-value stores."

[dependencies]
thiserror = "1"
serde = { version = "1.0.213", optional = true }
borsh = { version = "1.5.1", optional = true }

[features]
default = []
serde = ["dep:serde"]
borsh = ["dep:borsh"]
